Bug 1497868 - In nsFtp, close data pipe as well. r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D12740

--HG--
extra : moz-landing-system : lando